rust/crates/ccusage/tests/snapshots/hermes__hermes_monthly_table.snap
---
source: crates/ccusage/tests/hermes.rs
expression: table
---
┌──────────┬───────────────┬───────────┬───────────┬───────────────┬─────────────┬───────────────┬─────────────┐
│ Month    │ Models        │     Input │    Output │  Cache Create │  Cache Read │  Total Tokens │  Cost (USD) │
├──────────┼───────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ 2025-06  │ - sonnet-4    │       600 │        60 │             0 │           0 │           660 │       $0.00 │
├──────────┼───────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ Total    │               │       600 │        60 │             0 │           0 │           660 │       $0.00 │
└──────────┴───────────────┴───────────┴───────────┴───────────────┴─────────────┴───────────────┴─────────────┘
