rust/crates/ccusage/tests/snapshots/hermes__hermes_session_json.snap
---
source: crates/ccusage/tests/hermes.rs
expression: report
---
{
  "sessions": [
    {
      "cacheCreationTokens": 0,
      "cacheReadTokens": 0,
      "inputTokens": 200,
      "messageCount": 1,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 0,
          "cacheReadTokens": 0,
          "cost": 0.0009000000000000001,
          "inputTokens": 200,
          "modelName": "claude-sonnet-4-20250514",
          "outputTokens": 20
        }
      ],
      "modelsUsed": [
        "claude-sonnet-4-20250514"
      ],
      "outputTokens": 20,
      "sessionId": "alpha/collision",
      "totalCost": 0.0009000000000000001,
      "totalTokens": 220
    },
    {
      "cacheCreationTokens": 0,
      "cacheReadTokens": 0,
      "inputTokens": 300,
      "messageCount": 1,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 0,
          "cacheReadTokens": 0,
          "cost": 0.00135,
          "inputTokens": 300,
          "modelName": "claude-sonnet-4-20250514",
          "outputTokens": 30
        }
      ],
      "modelsUsed": [
        "claude-sonnet-4-20250514"
      ],
      "outputTokens": 30,
      "sessionId": "beta/collision",
      "totalCost": 0.00135,
      "totalTokens": 330
    },
    {
      "cacheCreationTokens": 0,
      "cacheReadTokens": 0,
      "inputTokens": 100,
      "messageCount": 1,
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 0,
          "cacheReadTokens": 0,
          "cost": 0.00045,
          "inputTokens": 100,
          "modelName": "claude-sonnet-4-20250514",
          "outputTokens": 10
        }
      ],
      "modelsUsed": [
        "claude-sonnet-4-20250514"
      ],
      "outputTokens": 10,
      "sessionId": "collision",
      "totalCost": 0.00045,
      "totalTokens": 110
    }
  ],
  "totals": {
    "cacheCreationTokens": 0,
    "cacheReadTokens": 0,
    "inputTokens": 600,
    "outputTokens": 60,
    "totalCost": 0.0027,
    "totalTokens": 660
  }
}
