rust/crates/ccusage/tests/snapshots/hermes__hermes_session_table.snap
---
source: crates/ccusage/tests/hermes.rs
expression: table
---
┌─────────────────┬───────────────┬───────────┬───────────┬───────────────┬─────────────┬───────────────┬─────────────┐
│ Session         │ Models        │     Input │    Output │  Cache Create │  Cache Read │  Total Tokens │  Cost (USD) │
├─────────────────┼───────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ alpha/collision │ - sonnet-4    │       200 │        20 │             0 │           0 │           220 │       $0.00 │
├─────────────────┼───────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ beta/collision  │ - sonnet-4    │       300 │        30 │             0 │           0 │           330 │       $0.00 │
├─────────────────┼───────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ collision       │ - sonnet-4    │       100 │        10 │             0 │           0 │           110 │       $0.00 │
├─────────────────┼───────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ Total           │               │       600 │        60 │             0 │           0 │           660 │       $0.00 │
└─────────────────┴───────────────┴───────────┴───────────┴───────────────┴─────────────┴───────────────┴─────────────┘
