rust/crates/ccusage/tests/snapshots/hermes__unified_hermes_daily_json.snap
---
source: crates/ccusage/tests/hermes.rs
expression: report
---
{
  "daily": [
    {
      "agent": "all",
      "cacheCreationTokens": 0,
      "cacheReadTokens": 0,
      "inputTokens": 600,
      "metadata": {
        "agents": [
          "hermes"
        ]
      },
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 0,
          "cacheReadTokens": 0,
          "cost": 0.0027,
          "inputTokens": 600,
          "modelName": "claude-sonnet-4-20250514",
          "outputTokens": 60
        }
      ],
      "modelsUsed": [
        "claude-sonnet-4-20250514"
      ],
      "outputTokens": 60,
      "period": "2025-06-15",
      "totalCost": 0.0027,
      "totalTokens": 660
    }
  ],
  "totals": {
    "cacheCreationTokens": 0,
    "cacheReadTokens": 0,
    "inputTokens": 600,
    "outputTokens": 60,
    "totalCost": 0.0027,
    "totalTokens": 660
  }
}
