rust/crates/ccusage/tests/snapshots/hermes__unified_hermes_monthly_table.snap
---
source: crates/ccusage/tests/hermes.rs
expression: table
---
┌──────────┬──────────────┬───────────┬──────────┬──────────┬──────────────┬────────────┬──────────────┬────────────┐
│ Month    │ Agent        │ Models    │    Input │   Output │ Cache Create │ Cache Read │ Total Tokens │ Cost (USD) │
├──────────┼──────────────┼───────────┼──────────┼──────────┼──────────────┼────────────┼──────────────┼────────────┤
│ 2025-06  │ All          │           │      600 │       60 │            0 │          0 │          660 │      $0.00 │
├──────────┼──────────────┼───────────┼──────────┼──────────┼──────────────┼────────────┼──────────────┼────────────┤
│          │ - Hermes     │ -         │      600 │       60 │            0 │          0 │          660 │      $0.00 │
│          │              │ sonnet-4  │          │          │              │            │              │            │
├──────────┼──────────────┼───────────┼──────────┼──────────┼──────────────┼────────────┼──────────────┼────────────┤
│ Total    │              │           │      600 │       60 │            0 │          0 │          660 │      $0.00 │
└──────────┴──────────────┴───────────┴──────────┴──────────┴──────────────┴────────────┴──────────────┴────────────┘
